Fix #1624 Remove overflow hidden on display-block

--- a/themes/templates/default.css
+++ b/themes/templates/default.css
@@ -451,7 +451,6 @@ Grids
 .display-block {
     display: block !important;
     width: 100%;
-    overflow: hidden;
 }
 
 .display-inline {
